<?xml version="1.0"?>
<package>
  <name>fix_haschke</name>
  <version>0.0.0</version>
  <description>The fix_haschke package</description>

  <maintainer email="5jonetzk@informatik.uni-hamburg.de">Yannick Jonetzko</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>moveit_ros_planning</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>moveit_ros_planning</run_depend>
  <run_depend>tf</run_depend>

</package>
